--- a/St.css
+++ b/St.css
@@ -136,7 +136,7 @@ header svg {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
