--- a/St.css
+++ b/St.css
@@ -1174,14 +1174,19 @@ header svg#rect-m{
    }
 }
 
-
 @keyframes hues {
-    0% {
-        -webkit-filter: hue-rotate(-10deg);
-                filter: hue-rotate(-10deg);
-    }
-    50% {
-        -webkit-filter: hue-rotate(10deg);
-                filter: hue-rotate(10deg);
-    }
+  0% {
+      -webkit-filter: hue-rotate(-10deg);
+              filter: hue-rotate(-10deg);
   }
+  50% {
+      -webkit-filter: hue-rotate(10deg);
+              filter: hue-rotate(10deg);
+  }
+}
+
+@media (max-width: 480px) {
+  img {
+    width: 100%;
+  }
+}
