--- a/St.css
+++ b/St.css
@@ -1038,6 +1038,14 @@ header svg#rect-m{
 .delay-105 {
     animation-delay: 1.05s;
 }
+.delay-11 {
+    animation-delay: 1.1s;
+}
+
+strong {
+  font-weight: bold;
+  font-size: larger;
+}
 
 .message {
     position: relative;
